--- a/catalog.html
+++ b/catalog.html
@@ -13,10 +13,14 @@
 
 <body>
     <header class="header">
-        <div class="main-header">
-            <a href="index.html">
-                <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
-            </a>
+        <h1 class="visually-hidden">Каталог</h1>
+        <nav class="catalog-header">
+        <div class="main-navigation">
+            <div class="container">
+                <a class="header-logo" href="index.html">
+                    <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
+                </a>
+                <div class="user-wrapper">
             <form method="get" action="https://echo.htmlacademy.ru">
                 <label class="visually-hidden" for="search-field">Поиск по сайту</label>
                 <input type="search" id="search-field" name="search-field" placeholder="Поиск:">
@@ -25,13 +29,15 @@
             <a class="link cart-link cart-success" href="#">Корзина:10</a>
             <a class="link order-link" href="#">Оформить заказ</a>
         </div>
+        </div>
+    </div>
         <div class="header-info">
-            <h1>Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</h1>
+            <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
             <div class="header-contacts">
                 <a href="tel:+78125550555">+7 (812) 555-05-55</a>
                 <p class="header-info-adress">г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             </div>
-            <div class="header-account">
+            <div class="user-navigation">
                 <div class="account-name">
                     <a class="account-link-name" href="#">Равшан Джамшутович</a>
                     <a href="index.html" aria-label="Выйти из аккаунта"></a>
@@ -42,7 +48,6 @@
                 </div>
             </div>
         </div>
-        <nav class="header-navigation">
             <ul class="site-navigation">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Компания</a></li>
@@ -52,9 +57,10 @@
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Контаткты</a></li>
             </ul>
-        </nav>
+    </nav>
     </header>
     <main class="catalog-page">
+        <div class="container">
         <ul class="breadcrumbs-list">
             <li>
                 <a href="index.html">
@@ -65,11 +71,21 @@
             <li><a href="#">инструмент</a></li>
             <li>перфораторы</li>
         </ul>
+    </div>
         <section>
+            <div class="container">
+                <div class="categories-wrapper">
             <p class="caption catalog-caption">Перфораторы</p>
+        </div>
+    </div>
+    <div class="container">
+             <div class="catalog-main-section">
             <div class="filter">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
+                <div class="filter-title-wrapper">
                 <p class="filter-title">Фильтр:</p>
+            </div>
+                 <div class="form-container">
                 <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                     <fieldset>
                         <legend>Цена:</legend>
@@ -132,6 +148,7 @@
                         Показать
                     </button>
                 </form>
+                </div>
             </div>
             <div class="catalog">
                 <div class="sort-row">
@@ -144,8 +161,8 @@
                         <li><a href="#" aria-label="Сортировка по убыванию"></a></li>
                     </ul>
                 </div>
-                <div class="products-container">
-                    <ul class="catalog-list">
+                <div class="products-container catalog-products-container">
+                    <ul class="catalog-list catalog-page-list">
                         <li class="catalog-item">
                             <h3>
                                 <span class="catalog-category">Перфоратор <b>bosch</b></span>
@@ -181,7 +198,7 @@
                                 <span class="catalog-category">Перфоратор <b>bosch</b></span>
                                 <span class="catalog-item-title">bfg 2000</span>
                             </h3>
-                            <p>
+                            <p class="catalog-item-image">
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
@@ -225,7 +242,7 @@
                                 <span class="catalog-category">Перфоратор <b>bosch</b></span>
                                 <span class="catalog-item-title">bfg 2000</span>
                             </h3>
-                            <p>
+                            <p class="catalog-item-image">
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
@@ -269,7 +286,7 @@
                                 <span class="catalog-category">Перфоратор <b>bosch</b></span>
                                 <span class="catalog-item-title">bfg 2000</span>
                             </h3>
-                            <p>
+                            <p class="catalog-item-image">
                                 <img src="img/product-1.jpg" width="218" height="170" alt="Перфоратор BOSCH BFG 2000">
                             </p>
                             <span class="price price-label">12500 Р.</span>
@@ -279,7 +296,7 @@
                               </div>
                         </li>
                     </ul>
-                </div>
+                
             </div>
             <ul class="pagination-list">
                 <li class="pagination-item pagination-item-current"><a>1</a></li>
@@ -287,8 +304,13 @@
                 <li class="pagination-item"><a href="#">3</a></li>
                 <li class="pagination-item"><a href="#">Cледующая</a></li>
             </ul>
+        </div> 
+        </div>
+        </div>
         </section>
         <section class="info-article-container product-info-article">
+            <div class="container">
+                <div class="product-info-article-wrapper">
             <h2 class="visually-hidden">Информация о перфораторах</h2>
             <p class="caption">Пара слов о перфораторах</p>
             <p class="service-desc">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и
@@ -298,10 +320,13 @@
                 дрели, шуруповерта и отбойного молотка.
                 В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
                 ударная дрель.</p>
+            </div>
+            </div>
         </section>
     </main>
     <footer class="main-footer">
         <div class="footer-navigation-container">
+          <div class="container">
           <div class="footer-first-line-wrapper">
             <a>
               <img src="img/logo-big.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
@@ -315,8 +340,10 @@
             </ul>
           </div>
           <div class="footer-second-line-wrapper">
+            <div class="footer-contacts-aside">
             <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
             <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
+            </div>
             <ul class="footer-list footer-service-list">
               <li><a href="#">Материалы</a></li>
               <li><a href="#">Техника</a></li>
@@ -324,8 +351,11 @@
               <li><a href="#">Спецпредложения</a></li>
             </ul>
           </div>
+          </div>
         </div>
         <div class="footer-aside">
+          <div class="container">
+            <div class="footer-aside-container">
           <p>&copy; 2010–2019 Компания «Техномарт»<br>Все права защищены</p>
           <ul class="footer-list footer-social-list">
             <li class="social-item"><a href="#" aria-label="Вконтакте"></a></li>
@@ -333,11 +363,17 @@
             <li class="social-item"><a href="#" aria-label="Инстаграм"></a></li>
           </ul>
           <div class="footer-contacts">
+            <div class="footer-contacts-container">
             <p>Обратная связь:<br>
               <a href="#">mail@htmlacademy.ru</a></p>
+            </div>
+            <div class="footer-contacts-container">
             <p>Разработано —<br>
-              <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
-          </div>
+             <a href="https://htmlacademy.ru/intensive/htmlcss">htmlacademy.ru</a></p>
+            </div>
+            </div>
+        </div>
+      </div>
         </div>
       </footer>
     <div class="modal modal-cart-success">
