--- a/catalog.html
+++ b/catalog.html
@@ -18,7 +18,7 @@
         <div class="main-navigation">
             <div class="container">
                 <a class="header-logo" href="index.html">
-                    <img src="img/logo-small.png" width="220" height="47" alt="Логотип магазина «Техномарт»">
+                    <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
                 </a>
                 <div class="user-wrapper">
             <form method="get" action="https://echo.htmlacademy.ru">
@@ -332,8 +332,8 @@
         <div class="footer-navigation-container">
           <div class="container">
           <div class="footer-first-line-wrapper">
-            <a>
-              <img src="img/logo-big.png" width="220" height="68" alt="Логотип магазина «Техномарт»">
+            <a class="footer-logo" href="index.html">
+              <img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип магазина «Техномарт»">
             </a>
             <ul class="footer-list footer-navigation-list">
               <li><a href="#">Компания</a></li>
