--- a/index.html
+++ b/index.html
@@ -114,6 +114,7 @@
       </div>
     </section>
     <section>
+      <h2 class="visually-hidden">Популярные товары</h2>
       <div class="container">
       <div class="popular">
         <p class="caption">Популярные товары:</p>
