--- a/catalog.html
+++ b/catalog.html
@@ -12,15 +12,13 @@
 </head>
 
 <body>
-    <header class="header">
-        <h1 class="visually-hidden">Каталог</h1>
-        <nav class="catalog-header">
+    <header class="header catalog-header">
         <div class="main-navigation">
             <div class="container">
                 <a class="header-logo" href="index.html">
                     <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
                 </a>
-                <div class="user-wrapper">
+                <nav class="user-wrapper">
             <form method="get" action="https://echo.htmlacademy.ru">
                 <label class="visually-hidden" for="search-field">Поиск по сайту</label>
                 <input type="search" id="search-field" name="search-field" placeholder="Поиск:">
@@ -28,9 +26,10 @@
             <a class="link flag-link" href="#">Закладки:0</a>
             <a class="link cart-link cart-success" href="#">Корзина:10</a>
             <a class="link order-link" href="#">Оформить заказ</a>
-        </div>
+        </nav>
         </div>
     </div>
+    <div class="container">
         <div class="header-info">
             <p class="site-title">Интернет-магазин<br>строительных материалов<br>и инструментов для ремонта</p>
             <div class="header-contacts">
@@ -46,8 +45,8 @@
                     <a class="account-link" href="#">Мои заказы</a>
                     <a class="account-link" href="#">Личный кабинет</a>
                 </div>
+                </div>
             </div>
-        </div>
             <ul class="site-navigation">
                 <li><a href="index.html">Главная</a></li>
                 <li><a href="#">Компания</a></li>
@@ -57,9 +56,10 @@
                 <li><a href="#">Доставка</a></li>
                 <li><a href="#">Контаткты</a></li>
             </ul>
-    </nav>
+        </div>
     </header>
     <main class="catalog-page">
+        <h1 class="visually-hidden">Каталог</h1>
         <div class="container">
         <ul class="breadcrumbs-list">
             <li>
@@ -76,16 +76,13 @@
             <div class="container">
                 <div class="categories-wrapper">
             <p class="caption catalog-caption">Перфораторы</p>
-        </div>
     </div>
-    <div class="container">
              <div class="catalog-main-section">
             <div class="filter">
                 <h2 class="visually-hidden">Фильтр товаров</h2>
                 <div class="filter-title-wrapper">
                 <p class="filter-title">Фильтр:</p>
             </div>
-                 <div class="form-container">
                 <form class="filter" method="get" action="https://echo.htmlacademy.ru">
                     <fieldset class="price-fieldset">
                         <legend>Цена:</legend>
@@ -148,7 +145,6 @@
                         Показать
                     </button>
                 </form>
-                </div>
             </div>
             <div class="catalog">
                 <div class="sort-row">
@@ -314,7 +310,6 @@
         </section>
         <section class="info-article-container product-info-article">
             <div class="container">
-                <div class="product-info-article-wrapper">
             <h2 class="visually-hidden">Информация о перфораторах</h2>
             <p class="caption">Пара слов о перфораторах</p>
             <p class="service-desc">Перфоратор — универсальный строительный инструмент. Предназначен для сверления и
@@ -324,7 +319,6 @@
                 дрели, шуруповерта и отбойного молотка.
                 В ассортиментном ряду есть выбор «трехрежимников»: в одном устройстве будут совмещены отбойный молоток и
                 ударная дрель.</p>
-            </div>
             </div>
         </section>
     </main>
