--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
     <section class="wrapper-service">
       <div class="container">
       <h2 class="visually-hidden">Виды товара</h2>
-      <div class="first-row-service">
+      <div class="first-service-column">
         <div class="type-of-service materials">
           <span class="service-caption">Материалы</span>
           <a class="service-link" href="#">На любой вкус </a>
@@ -68,13 +68,6 @@
           <a class="service-link" href="#">На все случаи </a>
           <img src="img/icons/icon-tools.svg" width="75" height="61" alt="Инструмент">
         </div>
-        <div class="type-of-service technic">
-          <span class="service-caption">Техника</span>
-          <a class="service-link" href="#">Для стройки</a>
-          <img src="img/icons/icon-technic.svg" width="78" height="62" alt="Техника для стройки">
-        </div>
-      </div>
-      <div class="second-row-service">
         <div class="slider">
           <ul class="slider-list">
             <li class="slider-item slide-1">
@@ -98,7 +91,13 @@
           </form>
         </div>
       </div>
-        <div class="container-group">
+      </div>
+      <div class="second-service-column">
+        <div class="type-of-service technic">
+          <span class="service-caption">Техника</span>
+          <a class="service-link" href="#">Для стройки</a>
+          <img src="img/icons/icon-technic.svg" width="78" height="62" alt="Техника для стройки">
+        </div>
         <div class="type-of-service sale">
           <span class="service-caption">Скидки 50%</span>
           <a class="service-link" href="#">На 350 товаров</a>
@@ -109,7 +108,6 @@
           <a class="service-link" href="#">Бесплатно</a>
           <img src="img/icons/icon-delivery.svg" width="78" height="63" alt="Доставка">
         </div>
-       </div>
       </div>
       </div>
     </section>
