--- a/index.html
+++ b/index.html
@@ -18,7 +18,7 @@
           <a class="header-logo">
             <img src="img/logo-technomart.svg" width="108" height="19" alt="Логотип магазина «Техномарт»">
           </a>
-          <nav class="user-wrapper">
+          <div class="user-wrapper">
       <form method="get" action="https://echo.htmlacademy.ru">
         <label class="visually-hidden" for="search-field">Поиск по сайту</label>
         <input type="search" id="search-field" name="search" placeholder="Поиск:">
@@ -26,7 +26,7 @@
       <a class="link flag-link" href="#">Закладки:0</a>
       <a class="link cart-link" href="#">Корзина:0</a>
       <a class="link order-link" href="#">Оформить заказ</a>
-    </nav>
+    </div>
    </div>
     </div>
     <div class="container">
@@ -41,7 +41,8 @@
         <a class="account-link" href="">Регистрация</a>
       </div>
     </div>
-      <ul class="site-navigation">
+    <nav class="site-navigation">
+      <ul class="site-navigation-list">
         <li><a href="#">Главная</a></li>
         <li><a href="#">Компания</a></li>
         <li><a href="catalog.html">Каталог</a></li>
@@ -50,6 +51,7 @@
         <li><a href="#">Доставка</a></li>
         <li><a href="#">Контаткты</a></li>
       </ul>
+    </nav>
       </div>
   </header>
   <main class="main-container">
@@ -318,7 +320,7 @@
   <footer class="main-footer">
     <div class="footer-navigation-container">
       <div class="container">
-      <div class="footer-first-line-wrapper">
+      <div class="footer-wrap footer-first-line-wrapper">
         <a class="footer-logo" href="index.html">
           <img src="img/logo-technomart.svg" width="137" height="22" alt="Логотип магазина «Техномарт»">
         </a>
@@ -330,7 +332,7 @@
           <li><a href="#">Контакты</a></li>
         </ul>
       </div>
-      <div class="footer-second-line-wrapper">
+      <div class="footer-wrap footer-second-line-wrapper">
         <div class="footer-contacts-aside">
         <p>г. Санкт-Петербург, ул. Б. Конюшенная, д. 19/8</p>
         <a class="footer-phone" href="tel:+78125550555">+7 (812) 555-05-55</a>
