--- a/catalog.html
+++ b/catalog.html
@@ -400,6 +400,7 @@
     </div>
     <button class="modal-close" type="button">Закрыть</button>
     </div>
+    <script src="js/catalog-modal.js"></script>
 </body>
 
 </html>
