--- a/index.html
+++ b/index.html
@@ -74,23 +74,21 @@
           <li><span class="service-caption">Материалы</span></li>
           <li><a class="service-link" href="#">На любой вкус </a></li>
         </ul>
-          <img src="img/icons/icon-materials.svg" width="44" height="65" alt="Материалы">
         </div>
         <div class="type-of-service tools">
           <ul class="type-of-service-list">
           <li><span class="service-caption">Инструмент</span></li>
           <li><a class="service-link" href="#">На все случаи </a></li>
         </ul>
-          <img src="img/icons/icon-tools.svg" width="75" height="61" alt="Инструмент">
         </div>
-        <input class="visually-hidden" type="radio" id="product-1-toggle" name="toggle" checked>
-        <input class="visually-hidden" type="radio" id="product-2-toggle" name="toggle">
-        <input class="visually-hidden" type="radio" id="product-arrow-left" name="arrow" checked>
-        <input class="visually-hidden" type="radio" id="product-arrow-right" name="arrow">
+        <input class="visually-hidden product-1-toggle" type="radio" id="product-1-toggle" name="toggle" checked>
+        <input class="visually-hidden product-2-toggle" type="radio" id="product-2-toggle" name="toggle">
+        <input class="visually-hidden product-1-arrow" type="radio" id="product-arrow-left" name="arrow" checked>
+        <input class="visually-hidden product-2-arrow" type="radio" id="product-arrow-right" name="arrow">
         <div class="slider">
           <div class="slider-controls-toggle">
-            <label class="product-toggle" for="product-1-toggle">Первый</label>
-            <label class="product-toggle" for="product-2-toggle">Второй</label>
+            <label class="product-label product-1-label" for="product-1-toggle">Первый</label>
+            <label class="product-label product-2-label" for="product-2-toggle">Второй</label>
           </div>
           <div class="slider-controls-arrow">
             <label class="product-arrow product-arrow-left" for="product-arrow-left">Первый</label>
@@ -116,21 +114,18 @@
          <li><span class="service-caption">Техника</span></li>
           <li><a class="service-link" href="#">Для стройки</a></li>
         </ul>
-          <img src="img/icons/icon-technic.svg" width="78" height="62" alt="Техника для стройки">
         </div>
         <div class="type-of-service sale">
           <ul class="type-of-service-list">
           <li><span class="service-caption">Скидки 50%</span></li>
           <li><a class="service-link" href="#">На 350 товаров</a></li>
         </ul>
-          <img src="img/icons/icon-sale.svg" width="59" height="72" alt="Распродажа">
         </div>
         <div class="type-of-service delivery">
           <ul class="type-of-service-list">
          <li><span class="service-caption">Доставка</span></li>
           <li><a class="service-link" href="#">Бесплатно</a></li>
         </ul>
-          <img src="img/icons/icon-delivery.svg" width="78" height="63" alt="Доставка">
         </div>
       </div>
       </div>
@@ -236,7 +231,7 @@
             </a>
           </li>
           <li class="popular-brands-item">
-            <a href="#">
+            <a class="popular-brands-interskol" href="#">
               <img src="img/brands/logo-interskol.png" width="200" height="88" alt="логотип ИНТЕРСКОЛ">
             </a>
           </li>
@@ -272,48 +267,47 @@
         <p class="service-desc advantages-desc">Хороший интернет-магазин отличается от плохого не только ценами!
           Мы стараемся изо всех сил, чтобы сделать ваши покупки приятными.</p>
       </div>
-      <div class="preferences-container">
-      <ul class="service-list">
-        <li>
-          <a class="service-title" href="">Доставка</a>
-        </li>
-        <li>
-          <a class="service-title" href="">Гарантия</a>
-        </li>
-        <li>
-          <a class="service-title" href="">Кредит</a>
-        </li>
-      </ul>
-      <div class="info-service info-delivery">
-        <p class="service-item-title">Доставка</p>
+<input class="visually-hidden service-1-toggle" type="radio" id="service-1-toggle" name="service-toggle" checked>
+<input class="visually-hidden service-2-toggle" type="radio" id="service-2-toggle" name="service-toggle">
+<input class="visually-hidden service-3-toggle" type="radio" id="service-3-toggle" name="service-toggle">
+<div class="preferences-container">
+  <div class="service-controls-toggle">
+  <label class="service-label service-1-label" for="service-1-toggle">Доставка</label>
+  <label class="service-label service-2-label" for="service-2-toggle">Гарантия</label>
+  <label class="service-label service-3-label" for="service-3-toggle">Кредит</label>
+</div>
+<ul class="service-list">
+  <li class="info-service info-delivery">
+    <p class="service-item-title">Доставка</p>
         <p class="service-desc service-delivery-desc">
           Мы с удовольствием доставим ваш товар прямо<br>
           к вашему подъезду совершенно бесплатно!
           Ведь мы неплохо заработаем,<br>
           поднимая его на ваш этаж!
         </p>
-      </div>
-      <div class="info-service info-guarantees">
-        <p class="service-item-title">Гарантия</p>
-        <p class="service-desc service-guarantees-desc">
-          Если купленный у нас товар поломается или заискрит,<br>
-          а также в случае пожара, спровоцированного его возгоранием,
-          вы всегда можете быть уверены в нашей гарантии. Мы обменяем
-          сгоревший товар на новый.<br>
-          Дом уж восстановите как-нибудь сами.
-        </p>
-      </div>
-      <div class="info-service info-credit">
-        <p class="service-item-title">Кредит</p>
+  </li>
+  <li class="info-service info-guarantees">
+    <p class="service-item-title">Гарантия</p>
+    <p class="service-desc service-guarantees-desc">
+      Если купленный у нас товар поломается или заискрит,<br>
+      а также в случае пожара, спровоцированного его возгоранием,
+      вы всегда можете быть уверены в нашей гарантии. Мы обменяем
+      сгоревший товар на новый.<br>
+      Дом уж восстановите как-нибудь сами.
+    </p>
+  </li>
+  <li class="info-service info-credit">
+    <p class="service-item-title">Кредит</p>
         <p class="service-desc service-credit-desc">
           Залезть в долговую яму стало проще!<br>
           Кредитные консультанты придут вам на помощь.
         </p>
         <a class="main-buttons" href="#">Отправить заявку</a>
-      </div>
-    </div>
-    </div>
-    </section>
+  </li>
+</ul>
+</div>
+</div>
+</section>
     <div class="container">
     <div class="info-aside-container">
       <section class="aside-column advantages">
@@ -336,11 +330,11 @@
         <h2 class="visually-hidden">Контактная информация</h2>
         <p class="caption">Контакты</p>
         <p class="service-desc contact-info-desc">Вы можете забрать товар сами, заехав в наш офис:</p>
-        <a href="#">
+        <a class="mini-map-link" href="#">
           <img  class="small-map" src="img/map-small.png" width="300" height="158"
             alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
         </a>
-        <a class="main-buttons" href="#">Заблудились? Напишите нам!</a>
+        <a class="main-buttons write-us-link" href="#">Заблудились? Напишите нам!</a>
       </section>
     </div>
     </div>
@@ -400,7 +394,7 @@
       <div class="modal-write-us-wrapper">
       <p class="write-us-item">
         <label for="name-field">Ваше имя:</label>
-        <input class="write-us-input" type="text" id="name-field" placeholder="Имя Фамилия" required>
+        <input class="write-us-input write-us-input-name" type="text" id="name-field" name="name" placeholder="Имя Фамилия" required>
       </p>
       <p class="write-us-item">
         <label for="email-field">Ваш e-mail:</label>
@@ -409,7 +403,7 @@
       </p>
       <div class="write-us-item textarea-item">
         <label for="textarea">Текст письма:</label>
-        <textarea class="write-us-input write-us-input-textarea" id="textarea" placeholder="В свободной форме" required></textarea>
+        <textarea class="write-us-input write-us-input-textarea" id="textarea" name="textarea" placeholder="В свободной форме" required></textarea>
       </div>
     </div>
       <div class="modal-button-container">
@@ -425,11 +419,12 @@
     <h2 class="visually-hidden">
       Как до нас добраться
     </h2>
+    <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d1998.6037872533252!2d30.320858716132967!3d59.938716481876185!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x4696310fca145cc1%3A0x42b32648d8238007!2z0JHQvtC70YzRiNCw0Y8g0JrQvtC90Y7RiNC10L3QvdCw0Y8g0YPQuy4sIDE5LzgsINCh0LDQvdC60YIt0J_QtdGC0LXRgNCx0YPRgNCzLCAxOTExODY!5e0!3m2!1sru!2sru!4v1583307675638!5m2!1sru!2sru" 
+    width="940" height="446" frameborder="0" style="border:0;" allowfullscreen=""></iframe>
     <a href="https://yandex.ru/maps/2/saint-petersburg/house/bolshaya_konyushennaya_ulitsa_19_8/Z0kYdQVjSEQPQFtjfXVyeXpgYQ==/?ll=30.323118%2C59.938635&sll=30.304899%2C59.918077&source=wizgeo&sspn=1.333466%2C0.410950&utm_medium=maps-desktop&utm_source=serp&z=16.64">
-      <img src="img/map-big.png" width="940" height="446"
-      alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
-      <button class="modal-close" type="button">Закрыть</button>
+      <img src="img/map-big.png" width="940" height="446" alt="Офис компании по адресу ул. Большая Конюшенная 19/8, Санкт-Петербург">
     </a>
+      <button class="modal-close" type="button">Закрыть</button>
   </div>
 
   <div class="modal-window modal-cart-success">
@@ -442,7 +437,7 @@
 </div>
 <button class="modal-close" type="button">Закрыть</button>
 </div>
-
+<script src="js/index-modal.js"></script>
 </body>
 
 </html>
