--- a/index.html
+++ b/index.html
@@ -394,16 +394,15 @@
       <div class="modal-write-us-wrapper">
       <p class="write-us-item">
         <label for="name-field">Ваше имя:</label>
-        <input class="write-us-input write-us-input-name" type="text" id="name-field" name="name" placeholder="Имя Фамилия" required>
+        <input class="write-us-input write-us-input-name" type="text" id="name-field" name="name" placeholder="Имя Фамилия">
       </p>
       <p class="write-us-item">
         <label for="email-field">Ваш e-mail:</label>
-        <input class="write-us-input" id="email-field" type="email" name="email" placeholder="email@example.com"
-          required>
+        <input class="write-us-input" id="email-field" type="email" name="email" placeholder="email@example.com">
       </p>
       <div class="write-us-item textarea-item">
         <label for="textarea">Текст письма:</label>
-        <textarea class="write-us-input write-us-input-textarea" id="textarea" name="textarea" placeholder="В свободной форме" required></textarea>
+        <textarea class="write-us-input write-us-input-textarea" id="textarea" name="textarea" placeholder="В свободной форме"></textarea>
       </div>
     </div>
       <div class="modal-button-container">
